modification after class

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 
     <section class="blog-section">
-        <h2>Stay Connected: <br> News, Sermons, Testimonies & More</h2>
+        <h2>Stay Connected: <br> <span class="lower">News, Sermons, Testimonies & More</span></h2>
 
         <div class="blog-post">
 
