--- a/index.html
+++ b/index.html
@@ -148,6 +148,44 @@
     </div>
 
 
+
+
+        <!-- Footer HTML -->
+        <footer class="footer">
+
+            <div class="address">
+                <img src="images/logo.png" alt="Church Logo">
+                <p>A welcoming community dedicated to sharing God’s love and serving our neighbours in faith and worship.</p>
+                <p>Call : +256 789 102204</p>
+                <p>pagmbaletownchurch@yahoo.com</p>
+                <p>Plot 6-7 Buginyanya Close,<br>Half London, Mbale, Uganda</p>
+            </div>
+            <div class="nav">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#about">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#ministries">Ministries</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#giving">Giving</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="social-media">
+                <h3>Connect</h3>
+                <ul>
+                    <li><a href="https://www.facebook.com/pagmbalecitychurch"><img src="images/fb.jpg" alt=""><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://www.youtube.com/@KhaukhaAmos"><img src="images/u-tube.png" alt=""><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="https://www.tiktok.com/search?q=p.a.g%20mbale%20city%20church&t=1738929995914"><img src="images/tiktok1.png" alt=""><i class="fab fa-tiktok"></i></a></li>
+                    <li><a href="#"><img src="images/instagram.jpg" alt=""><i class="fab fa-instagram"></i></a></li>
+                </ul>
+            </div>
+            <div class="church-name">
+                P.A.G MBALE <br>CITY CHURCH
+            </div>
+        </footer>
+
+
     <script>
         document.querySelector('.menu-toggle').addEventListener('click', function () {
             document.querySelector('.nav-links').classList.toggle('active');
