--- a/index.html
+++ b/index.html
@@ -18,37 +18,42 @@
 
 <body>
     <header class="header">
-        <img src="images/logo.png" alt="Church Logo">
+        <img src="images/logo-export.svg" alt="Church Logo"/>
         <nav>
             <ul class="nav-links">
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">About Us</a></li>
                 <li><a href="#ministries">Ministries</a></li>
-                <li><a href="#blog">Blog</a></li>
+                <li><a href="#blog">Blogs</a></li>
                 <li><a href="#giving">Giving</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="cta-header"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <div class="menu-toggle">☰</div>
     </header>
 
     <section class="hero">
         <div class="hero-content">
-            <h1> Pentecostal Assemblies of God <br> <span class="sub-heading">- Mbale City Church</span></h1>
-            <p>Join us in worship and fellowship.</p>
-            <a href="#" class="cta-button">Plan Your Visit</a>
+            <h1> <span class="sub">Welcome To</span> P.A.G <br> MBALE <span class="sub"> City Church</span> </h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut 
+                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <a href="#" class="join">Join Our Worship</a>
+            <a href="#" class="watch">Watch Live</a>
         </div>
     </section>
 
   
     <div class="oval-container">
-        <div class="location-info">
-            <h2>📍 Location</h2>
-            <p>Plot 6-7 Buginyanya Close, <br> Half London, Mbale, Uganda</p>
-        </div>
-        <div class="divider"></div>
+
         <div class="service-time">
             <h2>⏰ Service Time</h2>
             <p>First Service: 7:30 AM – 9:45 AM <br> Second Service: 10:00 AM – 12:00 PM</p>
+        </div>
+        <div class="divider"></div>
+        <div class="location-info">
+            <h2>📍 Location</h2>
+            <p>Plot 6-7 Buginyanya Close, <br> Half London, Mbale, Uganda</p>
         </div>
     </div>
 
@@ -60,7 +65,7 @@
     
         <!-- Left Page -->
         <div class="left-page">
-            <img src="images/about1.png" alt="">
+            <img src="images/about1.png" alt="" />
         </div>
 
         <!-- Right Page -->
@@ -90,11 +95,10 @@
     <!-- Social Proof Section -->
 
     <div class="social-proof-container">
-
-        <img src="../images/2.png" alt="Social Proof Image">
+        <img src="../images/2.png" alt="Social Proof Image" />
 
         <section class="social-proof">
-            <img class="ellipse" src="images/Ellipse 5.png" alt="">
+            <img class="ellipse" src="images/Ellipse 5.png" alt="" />
             <h2>Embrace A Transformative Community</h2>
             <div class="testimonials">
                 <p>
@@ -106,20 +110,19 @@
             </div>
             <div class="stats-container">
                 <div class="stat-box">
-                    <h3> <img src="images/multiple-users-silhouette.png" alt="">5,000+</h3>
+                    <h3> <img src="images/multiple-users-silhouette.png" alt="" />5,000+</h3>
                     <p>Active Members</p>
                 </div>
                 <div class="stat-box">
-                    <h3> <img src="images/calendar.png" alt="">30+</h3>
+                    <h3> <img src="images/calendar.png" alt="" />30+</h3>
                     <p>Years of Service</p>
                 </div>
                 <div class="stat-box">
-                    <h3> <img src="images/reach.png" alt="">100+</h3>
+                    <h3> <img src="images/reach.png" alt="" />100+</h3>
                     <p>Outreach Programs</p>
                 </div>
             </div>
         </section>
-
     </div>
 
     <!-- Leadership Section -->
@@ -129,21 +132,21 @@
 
         <div class="leaders-container">
             <div class="leader-card">
-                <img src="images/pastor1.jpg" alt="">
+                <img src="images/pastor1.jpg" alt="" />
                 <div class="text">
                     <p>Pastor</p>
                     <h3>John Wade</h3>
                 </div>
             </div>
             <div class="leader-card">
-                <img src="images/pastor1.jpg" alt="Jane Smith">
+                <img src="images/pastor1.jpg" alt="Jane Smith" />
                 <div class="text">
                     <p>Pastor</p>
                     <h3>John Wade</h3>
                 </div>
             </div>
             <div class="leader-card">
-                <img src="images/pastor1.jpg" alt="Mark Johnson">
+                <img src="images/pastor1.jpg" alt="Mark Johnson" />
                 <div class="text">
                     <p>Pastor</p>
                     <h3>John Wade</h3>
@@ -160,7 +163,7 @@
         <section class="blog-section">
             <div class="blog-post">
 
-                <img src="images/s1.jpg" alt="Sermon Image">
+                <img src="images/s1.jpg" alt="Sermon Image" />
                 <h3>40-days prayer and fasting</h3>
                 <br>
                 <p>
@@ -173,7 +176,7 @@
             </div>
 
             <div class="blog-post">
-                <img src="images/2.png" alt="Sermon Image">
+                <img src="images/2.png" alt="Sermon Image" />
                 <h3>God’s faithfulness in my life</h3>
                 <br>
                 <p>
@@ -186,7 +189,7 @@
             </div>
 
             <div class="blog-post">
-                <img src="images/pastor3.jpg" alt="Sermon Image">
+                <img src="images/pastor3.jpg" alt="Sermon Image" />
                 <h3>Understanding Romans 12:12</h3>
                 <br>
                 <p>dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
@@ -206,13 +209,13 @@
 
         <div class="address">
             <p class="croped">
-                <img src="images/logo1.png" alt="Church Logo" height="150px"> <br>
+                <img src="images/logo1.png" alt="Church Logo" height="150px" /> <br>
                 <span class="filler"> A welcoming community dedicated to sharing God’s love and serving our neighbours
                     in faith and worship. </span>
             </p> <br>
-            <p><img src="images/Phone-icon.svg" alt=""> + 254 123 456 789</p>
-            <p> <img src="images/mail-icon.svg" alt=""> support@gracecommunitychurch.com</p>
-            <p> <img src="images/location_on.svg" alt=""> 123 Church St, Mbale City, Uganda</p>
+            <p><img src="images/Phone-icon.svg" alt="" /> + 254 123 456 789</p>
+            <p> <img src="images/mail-icon.svg" alt="" /> support@gracecommunitychurch.com</p>
+            <p> <img src="images/location_on.svg" alt="" /> 123 Church St, Mbale City, Uganda</p>
         </div>
 
         <div class="nav">
@@ -240,14 +243,16 @@
         <div class="social-media">
             <h3>Follow us</h3>
             <ul>
-                <li><a href="https://www.facebook.com/pagmbalecitychurch"><img src="images/facebook.svg" alt=""><i
-                            class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><img src="images/instagram.svg" alt=""></i></a></li>
-                <li><a href="https://www.tiktok.com/search?q=p.a.g%20mbale%20city%20church&t=1738929995914"><img
-                            src="images/twitter.svg" alt=""></i></a></li>
-                <li><a href="#"><img src="images/mail.svg" alt=""></i></a></li>
-                <li><a href="https://www.youtube.com/@KhaukhaAmos"><img src="images/youtube.svg" alt=""><i
-                            class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.facebook.com/pagmbalecitychurch"> <img src="images/facebook.svg" alt="" />
+                </a></li>
+                <li><a href="#"><img src="images/instagram.svg" alt="" /> 
+                </a></li>
+                <li><a href="https://www.tiktok.com/search?q=p.a.g%20mbale%20city%20church&t=1738929995914"><img src="images/twitter.svg" alt="" />
+                </a></li>
+                <li><a href="#"><img src="images/mail.svg" alt="">
+                </a></li>
+                <li><a href="https://www.youtube.com/@KhaukhaAmos"><img src="images/youtube.svg" alt="" />
+                </a></li>
             </ul>
         </div>
 
