finished the header

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#ministries">Ministries</a></li>
                 <li><a href="#blog">Blogs</a></li>
                 <li><a href="#giving">Giving</a></li>
-                <li class="cta-header"><a href="#contact">Contact</a></li>
+                <li class="cta-header"><a href="#contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
