finished time and location

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <div class="oval-container">
 
         <div class="service-time">
-            <h2>⏰ Service Time</h2>
+            <h2><img src="images/clock.png" alt=""/> Service Time</h2>
             <p>First Service: 7:30 AM – 9:45 AM <br> Second Service: 10:00 AM – 12:00 PM</p>
         </div>
         <div class="divider"></div>
         <div class="location-info">
-            <h2>📍 Location</h2>
+            <h2><img src="images/location.png" alt="" /> Location</h2>
             <p>Plot 6-7 Buginyanya Close, <br> Half London, Mbale, Uganda</p>
         </div>
     </div>
