modified social and blog

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <!-- Leadership Section -->
     <section class="leadership">
-        <h2>Meet the <span class="hearts">Hearts Behind</span> The Mission</h2>
+        <h2>Meet The <span class="hearts">Hearts Behind</span> The Mission</h2>
         <p>Faithful leaders guiding our community with love and wisdom</p>
 
         <div class="leaders-container">
@@ -163,7 +163,7 @@
         <section class="blog-section">
             <div class="blog-post">
 
-                <img src="images/s1.jpg" alt="Sermon Image" />
+                <img src="images/pastor3.jpg" alt="Sermon Image" />
                 <h3>40-days prayer and fasting</h3>
                 <br>
                 <p>
@@ -176,7 +176,7 @@
             </div>
 
             <div class="blog-post">
-                <img src="images/2.png" alt="Sermon Image" />
+                <img src="images/pastor3.jpg" alt="Sermon Image" />
                 <h3>God’s faithfulness in my life</h3>
                 <br>
                 <p>
