--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="header">
-        <img src="images/logo-export.svg" alt="Church Logo"/>
+        <img src="images/logo-export.svg" alt="Church Logo" />
         <nav>
             <ul class="nav-links">
                 <li><a href="#about">About Us</a></li>
@@ -34,8 +34,8 @@
         <div class="hero-content">
             <h1> <span class="sub">Welcome To</span> P.A.G <br> MBALE <span class="sub"> City Church</span> </h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut 
-                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                 laboris nisi ut aliquip ex ea commodo consequat.
             </p>
             <a href="#" class="join">Join Our Worship</a>
@@ -43,11 +43,11 @@
         </div>
     </section>
 
-  
+
     <div class="oval-container">
 
         <div class="service-time">
-            <h2><img src="images/clock.png" alt=""/> Service Time</h2>
+            <h2><img src="images/clock.png" alt="" /> Service Time</h2>
             <p>First Service: 7:30 AM – 9:45 AM <br> Second Service: 10:00 AM – 12:00 PM</p>
         </div>
         <div class="divider"></div>
@@ -58,11 +58,11 @@
     </div>
 
 
-
+    <!-- about -->
     <section class="about-section">
 
         <a href="#" class="about">About Us</a>
-    
+
         <!-- Left Page -->
         <div class="left-page">
             <img src="images/about1.png" alt="" />
@@ -71,24 +71,23 @@
         <!-- Right Page -->
         <div class="right-page">
             <h2>Experience a Naturing Environment at Grace Community Church</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <p>
-            <ul>
-                <li>Engage with diverse worship experiences that resonate</li>
-                <li>Access resources that inspire spiritual development</li>
-                <li>Join activities that connect you with our vibrant community</li>
-                <li>Stay informed with our comprehensive events calendar</li>
-            </ul>
-            </p>
-            <a href="#" class="reach">Reach Out To Us</a>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <p>
+                <ul>
+                    <li>Engage with diverse worship experiences that resonate</li>
+                    <li>Access resources that inspire spiritual development</li>
+                    <li>Join activities that connect you with our vibrant community</li>
+                    <li>Stay informed with our comprehensive events calendar</li>
+                </ul>
+                </p>
+                <a href="#" class="reach">Reach Out To Us</a>
         </div>
 
     </section>
-
 
 
 
@@ -156,7 +155,7 @@
     </section>
 
 
-
+    <!-- blog  -->
     <div class="blog-container">
         <h2 class="blog-heading">Stay Connected</h2>
         <h2 class="lower">Church News, Sermons, Testimonies & More</h2>
@@ -203,14 +202,17 @@
     </div>
 
 
+    <div class="diagonal"></div>
 
     <!-- Footer HTML -->
+
     <footer class="footer">
 
         <div class="address">
             <p class="croped">
                 <img src="images/logo1.png" alt="Church Logo" height="150px" /> <br>
-                <span class="filler"> A welcoming community dedicated to sharing God’s love and serving our neighbours
+                <span class="filler"> A welcoming community dedicated to sharing God’s love and serving our
+                    neighbours
                     in faith and worship. </span>
             </p> <br>
             <p><img src="images/Phone-icon.svg" alt="" /> + 254 123 456 789</p>
@@ -244,15 +246,16 @@
             <h3>Follow us</h3>
             <ul>
                 <li><a href="https://www.facebook.com/pagmbalecitychurch"> <img src="images/facebook.svg" alt="" />
-                </a></li>
-                <li><a href="#"><img src="images/instagram.svg" alt="" /> 
-                </a></li>
-                <li><a href="https://www.tiktok.com/search?q=p.a.g%20mbale%20city%20church&t=1738929995914"><img src="images/twitter.svg" alt="" />
-                </a></li>
+                    </a></li>
+                <li><a href="#"><img src="images/instagram.svg" alt="" />
+                    </a></li>
+                <li><a href="https://www.tiktok.com/search?q=p.a.g%20mbale%20city%20church&t=1738929995914"><img
+                            src="images/twitter.svg" alt="" />
+                    </a></li>
                 <li><a href="#"><img src="images/mail.svg" alt="">
-                </a></li>
+                    </a></li>
                 <li><a href="https://www.youtube.com/@KhaukhaAmos"><img src="images/youtube.svg" alt="" />
-                </a></li>
+                    </a></li>
             </ul>
         </div>
 
@@ -262,6 +265,7 @@
         </div> -->
 
     </footer>
+
 
 
     <div class="footer-bottom">
