removed the page-scroll

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- Social Proof Section -->
 
     <div class="social-proof-container">
-        <img src="images/2.png" alt="Social Proof Image" />
+        <img class="excess" src="images/2.png" alt="Social Proof Image" />
 
         <section class="social-proof">
             <img class="ellipse" src="images/Ellipse 5.png" alt="" />
