--- a/index.html
+++ b/index.html
@@ -170,6 +170,19 @@
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                     ullamco laboris nisi ut aliquip ex ea commodo consequat.dolor sit amet, consectetur
                     adipiscing elit. Sed do eiusmod
+
+
+                    dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.dolor sit amet, consectetur
+                    adipiscing elit. Sed do eiusmod
+
+
+
+                    dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.dolor sit amet, consectetur
+                    adipiscing elit. Sed do eiusmod
                 </p>
                 <a href="#" class="read-more">Read More</a>
             </div>
@@ -205,7 +218,6 @@
     <div class="diagonal"></div>
 
     <!-- Footer HTML -->
-
     <footer class="footer">
 
         <div class="address">
