mobile time and service

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         </div>
     </section>
 
-
+    
+    <!-- time and location -->
     <div class="oval-container">
 
         <div class="service-time">
