mobile about us

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
 
-    <!-- about -->
+    <!-- About Us -->
     <section class="about-section">
 
         <a href="#" class="about">About Us</a>
