mobile footer and diagonal

--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
                     neighbours
                     in faith and worship. </span>
             </p> <br>
-            <p><img src="images/Phone-icon.svg" alt="" /> + 254 123 456 789</p>
-            <p> <img src="images/mail-icon.svg" alt="" /> support@gracecommunitychurch.com</p>
-            <p> <img src="images/location_on.svg" alt="" /> 123 Church St, Mbale City, Uganda</p>
+            <p class="icons-footer"> <img src="images/Phone-icon.svg" alt="" /> + 254 123 456 789</p>
+            <p class="icons-footer">  <img src="images/mail-icon.svg" alt="" /> support@gracecommunitychurch.com</p>
+            <p class="icons-footer"> <img src="images/location_on.svg" alt="" /> 123 Church St, Mbale City, Uganda</p>
         </div>
 
         <div class="nav">
