mobile footer and footer bottom

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Church Website</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
 
 
 </head>
@@ -17,6 +17,7 @@
 
 
 <body>
+    <!-- header  -->
     <header class="header">
         <img src="images/logo-export.svg" alt="Church Logo" />
         <nav>
@@ -30,6 +31,7 @@
         </nav>
     </header>
 
+    <!-- hero  -->
     <section class="hero">
         <div class="hero-content">
             <h1> <span class="sub">Welcome To</span> P.A.G <br> MBALE <span class="sub"> City Church</span> </h1>
@@ -42,11 +44,9 @@
             <a href="#" class="watch">Watch Live</a>
         </div>
     </section>
-
     
     <!-- time and location -->
     <div class="oval-container">
-
         <div class="service-time">
             <h2><img src="images/clock.png" alt="" /> Service Time</h2>
             <p>First Service: 7:30 AM – 9:45 AM <br> Second Service: 10:00 AM – 12:00 PM</p>
@@ -57,7 +57,6 @@
             <p>Plot 6-7 Buginyanya Close, <br> Half London, Mbale, Uganda</p>
         </div>
     </div>
-
 
     <!-- About Us -->
     <section class="about-section">
@@ -90,12 +89,9 @@
 
     </section>
 
-
-
     <!-- Social Proof Section -->
     <div class="social-proof-container">
         <img class="excess" src="images/2.png" alt="Social Proof Image" />
-
         <section class="social-proof">
             <img class="ellipse" src="images/Ellipse 5.png" alt="" />
             <h2>Embrace A Transformative Community</h2>
@@ -128,7 +124,6 @@
     <section class="leadership">
         <h2>Meet The <span class="hearts">Hearts Behind</span> The Mission</h2>
         <p>Faithful leaders guiding our community with love and wisdom</p>
-
         <div class="leaders-container">
             <div class="leader-card">
                 <img src="images/pastor1.jpg" alt="" />
@@ -153,7 +148,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- blog  -->
     <div class="blog-container">
@@ -186,7 +180,6 @@
                 </p>
                 <a href="#" class="read-more">Read More</a>
             </div>
-
             <div class="blog-post">
                 <img src="images/pastor3.jpg" alt="Sermon Image" />
                 <h3>God’s faithfulness in my life</h3>
@@ -199,7 +192,6 @@
                 </p>
                 <a href="#" class="read-more">Read More</a>
             </div>
-
             <div class="blog-post">
                 <img src="images/pastor3.jpg" alt="Sermon Image" />
                 <h3>Understanding Romans 12:12</h3>
@@ -210,16 +202,14 @@
                     adipiscing elit. Sed do eiusmod</p>
                 <a href="#" class="read-more">Read More</a>
             </div>
-
         </section>
     </div>
 
-
+    <!-- diagonal  -->
     <div class="diagonal"></div>
 
-    <!-- Footer HTML -->
+    <!-- Footer  -->
     <footer class="footer">
-
         <div class="address">
             <p class="croped">
                 <img src="images/logo1.png" alt="Church Logo" height="150px" /> <br>
@@ -231,7 +221,6 @@
             <p class="icons-footer">  <img src="images/mail-icon.svg" alt="" /> support@gracecommunitychurch.com</p>
             <p class="icons-footer"> <img src="images/location_on.svg" alt="" /> 123 Church St, Mbale City, Uganda</p>
         </div>
-
         <div class="nav">
             <h3>Quick Links</h3>
             <ul>
@@ -244,7 +233,6 @@
                 <li><a href="#giving">Giving</a></li>
             </ul>
         </div>
-
         <div class="com">
             <h3>Our Community</h3>
             <ul>
@@ -252,8 +240,6 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
-
-
         <div class="social-media">
             <h3>Follow us</h3>
             <ul>
@@ -270,22 +256,15 @@
                     </a></li>
             </ul>
         </div>
-
-        <!--
-        <div class="church-name">
-            P.A.G MBALE <br>CITY CHURCH
-        </div> -->
-
     </footer>
 
-
-
+    <!-- Footer bottom -->
     <div class="footer-bottom">
         <div class="footer-line"></div> <!-- This is the adjustable line -->
         <p class="copyright">© 2025 Grace Community Church. All Rights Reserved.</p>
     </div>
 
-
+    <!-- JavaScript  -->
     <script>
         document.querySelector('.menu-toggle').addEventListener('click', function () {
             document.querySelector('.nav-links').classList.toggle('active');
