social proof middle-line

--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
                     <h3> <img src="images/multiple-users-silhouette.png" alt="" />5,000+</h3>
                     <p>Active Members</p>
                 </div>
+                <div class="middle-line"></div>
                 <div class="stat-box">
                     <h3> <img src="images/calendar.png" alt="" />30+</h3>
                     <p>Years of Service</p>
                 </div>
+                <div class="middle-line"></div>
                 <div class="stat-box">
                     <h3> <img src="images/reach.png" alt="" />100+</h3>
                     <p>Outreach Programs</p>
