general page edits

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!-- header  -->
+    <!-- header   Wraps the logo and navigation menu. -->
     <header class="header">
         <img src="images/logo-export.svg" alt="Church Logo" />
         <nav>
@@ -29,12 +29,18 @@
     <!-- hero  -->
     <section class="hero">
         <div class="hero-content">
-            <h1> <span class="sub">Welcome To</span> P.A.G <br> MBALE <span class="sub"> City Church</span> </h1>
+            <h1> 
+                <span class="sub">Welcome To</span> P.A.G <br> MBALE 
+                <span class="sub"> City Church</span> 
+            </h1>
+
+            <!-- Placeholder text (Lorem Ipsum) for the hero description -->
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                 laboris nisi ut aliquip ex ea commodo consequat.
             </p>
+
             <a href="#" class="join">Join Our Worship</a>
             <a href="#" class="watch">Watch Live</a>
         </div>
@@ -56,6 +62,7 @@
     <!-- About Us -->
     <section class="about-section">
 
+        <!-- About Us Button -->
         <a href="#" class="about">About Us</a>
 
         <!-- Left Page -->
